# chuch-term

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml
.github/workflows/: ci.yml  pipeline.yml  release.yml
packaging/homebrew/: README.md  RELEASE_CHECKLIST.md
scripts/: release_version.sh
src/: app.rs  color.rs  command_alias.rs  config.rs  main.rs  shortcuts.rs
src/clipboard/: mod.rs
src/commands/: mod.rs
src/editor/: buffer.rs  cursor.rs  history.rs  mod.rs  search.rs  viewport.rs
src/input/: keybindings.rs  mod.rs
src/syntax/: mod.rs
src/syntax/languages/: config.rs  go.rs  js.rs  log.rs  markdown.rs  mod.rs  proto.rs  python.rs  rust.rs  shell.rs  toml.rs  yaml.rs
src/ui/: command_alias_overlay.rs  command_palette.rs  editor_view.rs  goto_bar.rs  help_overlay.rs  hints_bar.rs  keybindings_overlay.rs  line_numbers.rs  mod.rs  replace_bar.rs  saveas_bar.rs  search_bar.rs  settings_overlay.rs  status_bar.rs
