[package]
name = "chuch-terminal"
version = "0.6.8"
edition = "2024"
rust-version = "1.94"
description = "A minimal, beautiful terminal text editor"
license = "MIT"
authors = ["chuch"]
repository = "https://github.com/KrzysPawlo/chuch-term"
homepage = "https://github.com/KrzysPawlo/chuch-term"
keywords = ["editor", "terminal", "tui", "text-editor", "cli"]
categories = ["command-line-utilities", "text-editors"]

[[bin]]
name = "chuch-term"
path = "src/main.rs"

[dependencies]
crossterm = "=0.29.0"
ratatui = "=0.30.0"
unicode-segmentation = "1"
unicode-width = "0.2"
anyhow = "1"
clap = { version = "=4.6.0", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
base64 = "0.22"
